crates/ruff_linter/src/rules/flake8_boolean_trap/snapshots/ruff_linter__rules__flake8_boolean_trap__tests__FBT001_FBT.py.snap
---
source: crates/ruff_linter/src/rules/flake8_boolean_trap/mod.rs
---
FBT001 Boolean-typed positional argument in function definition
 --> FBT.py:4:5
  |
4 |     posonly_boolhint: bool,
  |     ^^^^^^^^^^^^^^^^
  |

FBT001 Boolean-typed positional argument in function definition
 --> FBT.py:5:5
  |
5 |     posonly_boolstrhint: "bool",
  |     ^^^^^^^^^^^^^^^^^^^
  |

FBT001 Boolean-typed positional argument in function definition
  --> FBT.py:10:5
   |
10 |     posorkw_nonvalued_boolhint: bool,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

FBT001 Boolean-typed positional argument in function definition
  --> FBT.py:11:5
   |
11 |     posorkw_nonvalued_boolstrhint: "bool",
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

FBT001 Boolean-typed positional argument in function definition
  --> FBT.py:14:5
   |
14 |     posorkw_boolvalued_boolhint: bool = True,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

FBT001 Boolean-typed positional argument in function definition
  --> FBT.py:15:5
   |
15 |     posorkw_boolvalued_boolstrhint: "bool" = True,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

FBT001 Boolean-typed positional argument in function definition
  --> FBT.py:18:5
   |
18 |     posorkw_nonboolvalued_boolhint: bool = 3,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

FBT001 Boolean-typed positional argument in function definition
  --> FBT.py:19:5
   |
19 |     posorkw_nonboolvalued_boolstrhint: "bool" = 4,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

FBT001 Boolean-typed positional argument in function definition
  --> FBT.py:93:19
   |
93 |     def foo(self, value: bool) -> None:
   |                   ^^^^^
   |
help: Consider adding `@typing.override` if changing the function signature would violate the Liskov Substitution Principle

FBT001 Boolean-typed positional argument in function definition
   --> FBT.py:103:10
    |
103 | def func(x: Union[list, Optional[int | str | float | bool]]):
    |          ^
    |

FBT001 Boolean-typed positional argument in function definition
   --> FBT.py:107:10
    |
107 | def func(x: bool | str):
    |          ^
    |
