crates/ruff_linter/src/rules/flake8_boolean_trap/snapshots/ruff_linter__rules__flake8_boolean_trap__tests__FBT002_FBT.py.snap
---
source: crates/ruff_linter/src/rules/flake8_boolean_trap/mod.rs
---
FBT002 Boolean default positional argument in function definition
  --> FBT.py:12:5
   |
12 |     posorkw_boolvalued_nohint=True,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |

FBT002 Boolean default positional argument in function definition
  --> FBT.py:13:5
   |
13 |     posorkw_boolvalued_nonboolhint: int = True,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

FBT002 Boolean default positional argument in function definition
  --> FBT.py:14:5
   |
14 |     posorkw_boolvalued_boolhint: bool = True,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

FBT002 Boolean default positional argument in function definition
  --> FBT.py:15:5
   |
15 |     posorkw_boolvalued_boolstrhint: "bool" = True,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
