crates/ruff_linter/src/rules/flake8_boolean_trap/snapshots/ruff_linter__rules__flake8_boolean_trap__tests__FBT003_FBT.py.snap
---
source: crates/ruff_linter/src/rules/flake8_boolean_trap/mod.rs
---
FBT003 Boolean positional value in function call
  --> FBT.py:41:11
   |
41 | used("a", True)
   |           ^^^^
   |

FBT003 Boolean positional value in function call
  --> FBT.py:56:11
   |
56 | {}.deploy(True, False)
   |           ^^^^
   |

FBT003 Boolean positional value in function call
  --> FBT.py:56:17
   |
56 | {}.deploy(True, False)
   |                 ^^^^^
   |

FBT003 Boolean positional value in function call
   --> FBT.py:123:10
    |
123 | settings(True)
    |          ^^^^
    |

FBT003 Boolean positional value in function call
   --> FBT.py:147:20
    |
147 |         then=Value(True),
    |                    ^^^^
    |

FBT003 Boolean positional value in function call
   --> FBT.py:149:19
    |
149 |     default=Value(False),
    |                   ^^^^^
    |

FBT003 Boolean positional value in function call
   --> FBT.py:159:23
    |
159 |     foo: bool = Field(True, exclude=True)
    |                       ^^^^
    |
