crates/ruff_linter/src/rules/flake8_boolean_trap/snapshots/ruff_linter__rules__flake8_boolean_trap__tests__extend_allowed_callable.snap
---
source: crates/ruff_linter/src/rules/flake8_boolean_trap/mod.rs
---
FBT003 Boolean positional value in function call
  --> FBT.py:41:11
   |
41 | used("a", True)
   |           ^^^^
42 | used(do=True)
   |

FBT003 Boolean positional value in function call
  --> FBT.py:56:11
   |
54 | {}.pop(True, False)
55 | dict.fromkeys(("world",), True)
56 | {}.deploy(True, False)
   |           ^^^^
57 | getattr(someobj, attrname, False)
58 | mylist.index(True)
   |

FBT003 Boolean positional value in function call
  --> FBT.py:56:17
   |
54 | {}.pop(True, False)
55 | dict.fromkeys(("world",), True)
56 | {}.deploy(True, False)
   |                 ^^^^^
57 | getattr(someobj, attrname, False)
58 | mylist.index(True)
   |

FBT003 Boolean positional value in function call
   --> FBT.py:123:10
    |
123 | settings(True)
    |          ^^^^
