crates/ruff_linter/src/rules/flake8_boolean_trap/snapshots/ruff_linter__rules__flake8_boolean_trap__tests__preview_FBT001_FBT.py.snap
---
source: crates/ruff_linter/src/rules/flake8_boolean_trap/mod.rs
---
--- Linter settings ---
-linter.preview = disabled
+linter.preview = enabled

--- Summary ---
Removed: 0
Added: 3

--- Added ---
FBT001 Boolean-typed positional argument in function definition
   --> FBT.py:183:23
    |
182 | # check literal
183 | def func_literal_both(flag: Literal[True, False]):
    |                       ^^^^
184 |     pass
    |


FBT001 Boolean-typed positional argument in function definition
   --> FBT.py:197:27
    |
196 | # ignore other literals
197 | def func_literal_optional(flag: Literal[True, False, None, "hello"]):
    |                           ^^^^
198 |     pass
    |


FBT001 Boolean-typed positional argument in function definition
   --> FBT.py:202:39
    |
201 | # collect `bool` from two separate literals
202 | def func_literal_split_union_optional(flag: Literal[True] | Literal[False] | None):
    |                                       ^^^^
203 |     pass
    |
